8333757: [lworld] sync javac code generation with the latest spec